fix: replacer should receive all available arguments, placeholders should not overlap content even being invisible

--- a/packages/highlightable-input/src/styles/style.css
+++ b/packages/highlightable-input/src/styles/style.css
@@ -25,6 +25,7 @@ highlightable-input[aria-placeholder]::before {
   content: attr(aria-placeholder);
   position: absolute;
   color: transparent;
+  pointer-events: none;
 }
 
 highlightable-input:empty::after {
